structure completed, header completed, spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ html, body {
     display: grid;
     overflow: auto;
     grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 6fr;
+    grid-template-rows: 1fr 7fr;
     height: 100%;
 }
 
@@ -124,8 +124,10 @@ html, body {
 .header-search-info {
     grid-column: 5/7;
     grid-row: 1/2;
-    display:flex;
+    display: flex;
     align-items: center;
+    justify-content: center;
+    gap: 20px;
 }
 
 .header-welcome {
@@ -147,7 +149,9 @@ html, body {
     grid-row: 2/3;
     display:flex;
     align-items: center;
-    justify-content: space-evenly;
+    gap: 25px;
+    justify-content: end;
+    margin-right: 7%;
 }
 
 .header-buttons button {
@@ -196,7 +200,7 @@ html, body {
 .main-left {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 36px 1fr 1fr 1fr;
+    grid-template-rows: 8px 1fr 1fr 1fr;
     gap: 32px;
 }
 
@@ -204,45 +208,6 @@ html, body {
     grid-column: 1/3;
     grid-row: 1/2;
 }
-
-/* .projects {
-    display: grid;
-    grid-template-columns: 10px 1fr;
-    grid-template-rows: auto auto;
-    background-color: rgb(256,256,256);
-    padding: 24px;
-    border-radius: 12px;
-    box-shadow: 3px 3px 5px lightgray;
-    position: relative;
-    overflow: hidden;
-    row-gap: 8px;
-}
-
-.projects::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 10px;
-    height: 100%;
-    background-color: rgb(240,180,41);
-}
-
-.projects .proj-title {
-    grid-column: 2;
-    grid-row: 1;
-    font-size: 1.4rem;
-    font-weight: bold;
-    margin: 0;
-}
-
-.projects .text {
-    grid-column: 2;
-    grid-row: 2;
-    font-size: 1.3rem;
-    color: rgb(100,100,100);
-    margin: 0;
-} */
 
 .projects {
     display: flex;
@@ -304,13 +269,13 @@ html, body {
 .right-upper {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 72px 1fr;
+    grid-template-rows: 42px 1fr;
 }
 
 .right-lower {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 72px 1fr;
+    grid-template-rows: 42px 1fr;
 }
 
 .right-upper .announcements {
